--- a/scss/common/rhombuses_icons/icons_style.scss
+++ b/scss/common/rhombuses_icons/icons_style.scss
@@ -9,7 +9,7 @@
 }
 
 .icon-base:before {
-  background-color: #00a99d;
+  background-color: $bG_col_offers_active;
   border-radius: 5px;
   transform: rotate(45deg);
 
