--- a/scss/components/_main/index.scss
+++ b/scss/components/_main/index.scss
@@ -3,3 +3,9 @@
 @import "_more_features";
 @import "_skills";
 @import "_our_work";
+@import "_facts";
+@import "_our_team";
+@import "_quotes";
+@import "_our_clients";
+@import "_price_tables";
+@import "_bubble";
