--- a/scss/common/mixins.scss
+++ b/scss/common/mixins.scss
@@ -8,3 +8,14 @@
   opacity: $icon_o;
 }
 
+@mixin our_work_item_bg($prop){
+  background-image: url($prop);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+@mixin our_team_item_bg($our_team_item){
+  background-image: url($our_team_item);
+  background-size: 50%;
+  transform: rotate(315deg);
+}
