--- a/scss/common/variables.scss
+++ b/scss/common/variables.scss
@@ -6,8 +6,11 @@ $font_family_h1: "Raleway-ExtraBold", sans-serif;
 
 
 //font-size
+$fs_facts_h: 80px;
 $fs_banner_h1: 64px;
+$fs_price: 60px;
 $fs_banner_p_style: 26px;
+$fs_quoter: 20px;
 $fs_banner_p: 18px;
 $fs_banner_fl: 17px;
 $fs_title_stile: 16px;
@@ -16,6 +19,7 @@ $fs_nav_link: 13px;
 $fs_features_p: 12px;
 
 //line-height
+$lh_quoter: 34px;
 $lh_main_text: 24px;
 
 //font-weight
@@ -37,10 +41,12 @@ $ct_banner_main: #383838;
 $border_col_navigation: #dedede;
 $bg_col_more_fuat: #f9f9f9;
 $bg_col_banner: #8a8a8a;
+$bg_col_facts_line: #484848;
 $bg_col_icon_offers: #383838;
 $bg_col_banner_p_bot: #333333;
 $button_col_nav_bar: #00a99d2e;
 $bG_col_offers_active: #00a99d;
+
 
 
 
