--- a/scss/components/_main/_offers.scss
+++ b/scss/components/_main/_offers.scss
@@ -22,14 +22,9 @@
                     background-color: $bg_col_icon_offers;
                     border-radius: 50%;
                     margin-bottom: 35px;
-                }
 
-                .icon_and_img_puzzle{
-                    padding-right: 8px;
-
-                    .puzzle{
-                        width: 40%;
-                        height: 40%;
+                    img{
+                        width: 50%;
                     }
                 }
 
