--- a/scss/components/_main/_skills.scss
+++ b/scss/components/_main/_skills.scss
@@ -1,5 +1,5 @@
 .skills{
-  padding: 75px 0 35px;
+  padding: 75px 0 25px;
   background-color: #383838;
   position: relative;
 
@@ -20,127 +20,97 @@
       }
 
 
-    .skills__sicle {
-
+    .skills__circle {
 
       .col-xxl-2{
         flex-direction: column;
         display: flex;
         align-items: center;
         margin-bottom: 30px;
+        position: relative;
 
-        .circular_wrapper{
+
+        .circle_wrapper {
           margin-bottom: 15px;
+          width: 120px;
+          height: 120px;
+          position: relative;
 
-          .circular{
-            height: 100px;
-            width: 100px;
-            position: relative;
-          }
-          .circular .inner, .circular .outer, .circular .circle{
-            position: absolute;
-            z-index: 6;
-            height: 100%;
-            width: 100%;
-            border-radius: 100%;
-            box-shadow: inset 0 1px 0 rgba(0,0,0,0.2);
-            transform: rotate(270deg);////////
-          }
-          .circular .inner{
-            top: 50%;
-            left: 50%;
-            height: 95px;
-            width: 95px;
-            margin: -47px 0 0 -47px;
-            background-color: #dde6f0;
-            border-radius: 100%;
-            box-shadow: 0 1px 0 rgba(0,0,0,0.2);
-          }
-          .circular .circle{
-            z-index: 1;
-            box-shadow: none;
-          }
-          .circular .numb{
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            z-index: 10;
-            font-size: 18px;
-            font-weight: 500;
-            color: #00a99d;
-          }
-          .circular .bar{
-            position: absolute;
-            height: 100%;
-            width: 100%;
-            background: #fff;
-            -webkit-border-radius: 100%;
-            clip: rect(0px, 100px, 100px, 50px);
-          }
-          .circle .bar .progress{
-            position: absolute;
-            height: 100%;
-            width: 100%;
-            -webkit-border-radius: 100%;
-            clip: rect(0px, 50px, 100px, 0px);
-          }
-          .circle .bar .progress, .dot span{
-            background: #00a99d;
-          }
-          .circle .left .progress{
-            z-index: 1;
-            animation: left 3s linear both;
-          }
-          @keyframes left {
-            100%{
-              transform: rotate(180deg);
-            }
-          }
-          .circle .right{
-            z-index: 3;
+          .circle {
             transform: rotate(180deg);
-          }
-          .circle .right .progress{
-            animation: right 3s linear both;
-            animation-delay: 3s;
-          }
-          @keyframes right {
-            100%{
-              transform: rotate(90deg);///////////
+            position: relative;
+
+            svg {
+              position: relative;
+              width: 120px;
+              height: 120px;
+
+              circle {
+                width: 120px;
+                height: 120px;
+                fill: none;
+                stroke-width: 3;
+                stroke: $bG_col_offers_active;
+                transform: translate(2px, 2px);
+                stroke-dasharray: 350;
+                stroke-dashoffset: 350;
+
+               &:nth-child(1) {
+                stroke-dashoffset: 0;
+                stroke: $bg_col_more_fuat;
+                }
+                &.percent_75{
+                  stroke-dashoffset: calc(350 - (350 * 75) / 100);
+                  stroke: $bG_col_offers_active;
+                }
+                &.percent_92{
+                  stroke-dashoffset: calc(350 - (350 * 92) / 100);
+                  stroke: $bG_col_offers_active;
+                }
+                &.percent_68{
+                  stroke-dashoffset: calc(350 - (350 * 68) / 100);
+                  stroke: $bG_col_offers_active;
+                }
+                &.percent_100{
+                  stroke-dashoffset: calc(350 - (350 * 100) / 100);
+                  stroke: $bG_col_offers_active;
+                }
+                &.percent_83{
+                  stroke-dashoffset: calc(350 - (350 * 83) / 100);
+                  stroke: $bG_col_offers_active;
+                }
+                &.percent_50{
+                  stroke-dashoffset: calc(350 - (350 * 50) / 100);
+                  stroke: $bG_col_offers_active;
+                }
+              }
             }
           }
-          .circle .dot{
-            z-index: 2;
+        }
+
+        .number{
             position: absolute;
-            left: 50%;
-            top: 50%;
-            width: 50%;
-            height: 10px;
-            margin-top: -5px;
-            animation: dot 0s linear both;////
-            transform-origin: 0% 50%;
+            top: 50px;
+            left: 35px;
+            @extend %display_j_center;
+
+          h6{
+              color: $ct_banner_secjnd;
+              font-family: $font_family_h1;
+              font-size: 30px;
+              font-weight: 400;
+              line-height: $fs_title_stile;
+              text-align: center;
+              text-transform: uppercase;
+
+              span{
+                font-size: $fs_title_stile;
+              }
           }
-          .circle .dot span {
-            position: absolute;
-            right: 0;
-            width: 10px;
-            height: 10px;
-            border-radius: 100%;
-          }
-          @keyframes dot{
-            0% {
-              transform: rotate(-90deg);
-            }
-            50% {
-              transform: rotate(90deg);
-              z-index: 4;
-            }
-            100% {
-              transform: rotate(270deg);
-              z-index: 4;
-            }
-          }
+        }
+
+        .percent_100_num{
+          left: 25px;
         }
 
         h4{
