--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,14 @@ body {
   color: #e4e4e4;
 }
 
+.more_features .container .row .more_features__items .gobelin div {
+  background: linear-gradient(-35deg, transparent 14px, #404040 0) right, linear-gradient(35deg, transparent 14px, #404040 0) left;
+}
+
+.more_features .container .row .more_features__items .gobelin {
+  background: linear-gradient(-35deg, transparent 14px, #00a99d 0) right, linear-gradient(35deg, transparent 14px, #00a99d 0) left;
+}
+
 .headline_banner {
   display: flex;
   justify-content: center;
@@ -523,19 +531,17 @@ body {
   margin-bottom: 50px;
 }
 .more_features .container .row .more_features__items .gobelin {
-  width: 40px;
+  margin-right: 20px;
   height: 70px;
-  background: linear-gradient(-35deg, transparent 14px, #00a99d 0) right, linear-gradient(35deg, transparent 14px, #00a99d 0) left;
+  width: 40px;
   background-size: 50% 100%;
   background-repeat: no-repeat;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
-  margin-right: 20px;
 }
 .more_features .container .row .more_features__items .gobelin div {
-  width: 40px;
   height: 50px;
-  background: linear-gradient(-35deg, transparent 14px, #404040 0) right, linear-gradient(35deg, transparent 14px, #404040 0) left;
+  width: 40px;
   background-size: 50% 100%;
   background-repeat: no-repeat;
   border-top-left-radius: 5px;
