--- a/scss/common/inheritance.scss
+++ b/scss/common/inheritance.scss
@@ -50,9 +50,18 @@
   }
 }
 
-//%features_section_items{
-//  background-size: 50% 100%;
-//  background-repeat: no-repeat;
-//  border-top-left-radius: 5px;
-//  border-top-right-radius: 5px;
-//}
+%gobelin{
+  width: 40px;
+  background-size: 50% 100%;
+  background-repeat: no-repeat;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+%gobelin_color_front{
+  background: linear-gradient(-35deg, transparent 14px, #404040 0) right, linear-gradient(35deg, transparent 14px, #404040 0) left;
+}
+
+%gobelin_color_back{
+  background: linear-gradient(-35deg, transparent 14px, #00a99d 0) right, linear-gradient(35deg, transparent 14px, #00a99d 0) left;
+}
