--- a/scss/components/_main/_more_features.scss
+++ b/scss/components/_main/_more_features.scss
@@ -10,25 +10,24 @@
         margin-bottom: 50px;
 
         .gobelin{
-          width: 40px;
+          margin-right: 20px;
           height: 70px;
-          background: linear-gradient(-35deg, transparent 14px, #00a99d 0) right, linear-gradient(35deg, transparent 14px, #00a99d 0) left;
+          @extend %gobelin_color_back;
+          width: 40px;
           background-size: 50% 100%;
           background-repeat: no-repeat;
           border-top-left-radius: 5px;
           border-top-right-radius: 5px;
-          //@extend %features_section_items;
-          margin-right: 20px;
 
           div{
-            width: 40px;
             height: 50px;
-            background: linear-gradient(-35deg, transparent 14px, #404040 0) right, linear-gradient(35deg, transparent 14px, #404040 0) left;
+            @extend %display_j_center;
+            @extend %gobelin_color_front;
+            width: 40px;
             background-size: 50% 100%;
             background-repeat: no-repeat;
             border-top-left-radius: 5px;
             border-top-right-radius: 5px;
-            @extend %display_j_center;
 
             img{
               width: 50%;
