--- a/scss/common/rhombuses_icons/icons_style.scss
+++ b/scss/common/rhombuses_icons/icons_style.scss
@@ -4,8 +4,17 @@
   position: absolute;
   width: 40px;
   height: 40px;
-  left: 49.5%;
+  left: 49%;
   top: -20px;
+
+
+  @media (max-width: 1200px ) {
+    left: 48%;
+  }
+  @media (max-width: 770px ) {
+    left: 47%;
+  }
+
 }
 
 .icon-base:before {
