--- a/scss/components/_header/_navigation.scss
+++ b/scss/components/_header/_navigation.scss
@@ -10,6 +10,9 @@
         }
 
         .col-xxl-9{
+          display: flex;
+          justify-content: flex-end;
+
           nav{
             padding: 0;
             div {
